INIT NEW SITE ON DEV BRANCHES

--- a/_includes/default/footer.html
+++ b/_includes/default/footer.html
@@ -1,3 +1,6 @@
+<script type="text/javascript" src="/assets/js/lightbox.js"></script>
+<link rel="stylesheet" href="/assets/css/lightbox.css">
+
 <footer class="site-footer">
     <p class="text">
         {{ site.footer_text | default: "Powered by <a href='https://jekyllrb.com/'>Jekyll</a> with <a href='https://github.com/sylhare/Type-on-Strap'>Type on Strap</a>" }}</p>
