--- a/_includes/landing.html
+++ b/_includes/landing.html
@@ -69,7 +69,7 @@
           <div class="container">
             <div class="row">
 				<div class="col text-center">
-                {% include blog/blogrow.html %}
+                {% include blog/blogrow.liquid %}
 				</div>
 			</div>
 			<div class="row">
@@ -105,7 +105,7 @@
       <div class="coolrow-teaser">
         <h1 class="title">Mon dernier article de blog</h1>
 				<div class="col text-center">
-                {% include blog/blogrow.html %}
+                {% include blog/blogrow.liquid %}
 				</div>
 		<div class="bootstrap-iso">
           <div class="container">
