Big init for my portfolio (still working on it)

--- a/_includes/front/blogrow.liquid
+++ b/_includes/front/blogrow.liquid
@@ -1,3 +1,12 @@
+
+  <div class="coolrow">
+      <div class="coolrow-teaser">
+        <h1 class="title">Mon dernier article de blog</h1>
+        <div class="bootstrap-iso">
+          <div class="container">
+            <div class="row">
+				<div class="col text-center">
+
 <div class="posts">
     {% unless site.posts %}
     <article><section class="post-content"><p>Il n'y a pas d'articles de blog.</p></section></article>
@@ -32,4 +41,16 @@
       </span>
     </div>
     {% endfor %}
+</div>
+
+				</div>
+			</div>
+			<div class="row">
+				<div class="col text-center">
+                <a href="/blog/"><button type="button" class="btn btn-primary">Explorer les articles précédent</button></a>
+				</div>
+			</div>
+        </div>
+		</div>
+	</div>
 </div>
