--- a/_includes/landing.liquid
+++ b/_includes/landing.liquid
@@ -61,77 +61,10 @@
       </div>
 </div>
 
-<!--
-  <div class="coolrow">
-      <div class="coolrow-teaser">
-        <h1 class="title">Mon dernier article de blog</h1>
-        <div class="bootstrap-iso">
-          <div class="container">
-            <div class="row">
-				<div class="col text-center">
-                {% include blog/blogrow.liquid %}
-				</div>
-			</div>
-			<div class="row">
-				<div class="col text-center">
-                <a href="/blog/"><button type="button" class="btn btn-primary">Explorer les articles précédent</button></a>
-				</div>
-			</div>
-        </div>
-		</div>
-	</div>
-</div>
--->
-
-  <div class="coolrow">
-      <div class="coolrow-teaser">
-        <h1 class="title">Un aperçu de mon portofolio</h1>
-				<div class="col text-center">
-                {% include portfoliorow.html %}
-				</div>
-		<div class="bootstrap-iso">
-          <div class="container">
-			<div class="row">
-				<div class="col text-center">
-                <a href="/blog/"><button type="button" class="btn btn-primary">Explorer mon portfolio</button></a>
-				</div>
-			</div>
-        </div>
-		</div>
-		</div>
-	</div>
-	
-  <div class="coolrow">
-      <div class="coolrow-teaser">
-        <h1 class="title">Mon dernier article de blog</h1>
-				<div class="col text-center">
-                {% include blog/blogrow.liquid %}
-				</div>
-		<div class="bootstrap-iso">
-          <div class="container">
-			<div class="row">
-				<div class="col text-center">
-                <a href="/blog/"><button type="button" class="btn btn-primary">Explorer les articles précédent</button></a>
-				</div>
-			</div>
-        </div>
-		</div>
-		</div>
-	</div>
+{% include front/blogrow.liquid %}
+{% include front/portfoliorow.liquid %}
+{% include front/wallsocialrow.liquid %}
 
 	  
- <div class="coolrow">
-      <div class="coolrow-teaser">
-		<h1 class="title">Retrouvez-moi sur les réseaux</h1>
-
-							<iframe allowfullscreen id="wallsio-iframe" src="https://walls.io/i9z66?nobackground=1&amp;show_header=0" style="border:0;height:500px;width:100%" title="Site Perso"></iframe>
-					
-		</div>
-</div>
-
-
-
-
-
 
 
