--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -10,6 +10,6 @@ layout: default
 		<h1> {{ site.header_text | default: "Change <code>header_text</code> in <code>_config.yml</code>"}} </h1>
 		</span>
 	</div>
-	{% include landing.html %}
+	{% include landing.liquid %}
 
 </div>
