--- a/_includes/front/portfoliorow.liquid
+++ b/_includes/front/portfoliorow.liquid
@@ -1,4 +1,10 @@
 <!-- Frontpage Portfolio Grid Section -->
+
+  <div class="coolrow">
+      <div class="coolrow-teaser">
+        <h1 class="title">Un aperçu de mon portofolio</h1>
+				<div class="col text-center">
+				
 <div class="portfolio-grid portfoliogridonfrontpage">
 	{% assign sorted = site.portfolio | sort: 'date' | reverse %}
     {% for item in sorted limit:3 %}
@@ -14,3 +20,16 @@
     </div>
     {% endfor %}
 </div>
+
+				</div>
+		<div class="bootstrap-iso">
+          <div class="container">
+			<div class="row">
+				<div class="col text-center">
+                <a href="/portfolio/"><button type="button" class="btn btn-primary">Explorer mon portfolio</button></a>
+				</div>
+			</div>
+        </div>
+		</div>
+		</div>
+	</div>
