Update current work

--- a/_includes/default/navbar.liquid
+++ b/_includes/default/navbar.liquid
@@ -1,4 +1,4 @@
-<header class="site-header">
+<header class="site-header soliddivider">
 
     <!-- Logo and title -->
 	<div class="branding">
@@ -21,18 +21,20 @@
     <!-- Menu -->
     <ul class="hide">
         {% assign name_page = "" %}
-
-        {% for page in site.pages %}
-            {% unless page.title == null or page.hide or name_page contains page.title %}
+		{% assign sorted_pages = site.pages | sort:"order" %}
+        {% for node in sorted_pages %}
+		{% if node.order %}
+            {% unless node.title == null or node.hide or name_page contains node.title %}
             <li class="separator"> | </li>
             <li>
-                <a class="clear" aria-label="{{ page.title }}" title="{{ page.title }}" href="{{ page.url | relative_url }}">
-                    {% if page.icon %} <i class="fas {{ page.icon }}" aria-hidden="true"></i>
-                    {% else %} {{ page.title }} {% endif%}
+                <a class="clear" aria-label="{{ page.title }}" title="{{ node.title }}" href="{{ node.url | relative_url }}">
+                    {% if node.icon %} <i class="fas {{ node.icon }}" aria-hidden="true"></i>
+                    {% else %} {{ node.title }} {% endif%}
                 </a>
             </li>
             {% endunless %}
-            {% assign name_page = page.title | append: name_page %}
+            {% assign name_page = node.title | append: name_page %}
+			        {% endif %}
         {% endfor %}
 
         {% if site.color_theme == 'auto' %}
@@ -40,6 +42,5 @@
         <li><a id="theme-toggle" title="{{ page.title }} " aria-label="{{ page.title }}" onclick="themeToggle()"></a></li>
         {% endif %}
     </ul>
-
 	</nav>
 </header>
