--- a/_includes/landing.liquid
+++ b/_includes/landing.liquid
@@ -1,68 +1,7 @@
-<div class="coolrow">
-      <div class="coolrow-teaser">
-        <h1 class="title">Mes potentiels</h1>
-          <div class="bootstrap-iso">
-            <div class="container">
-              <div class="row">
-                <div class="col-sm-12 col-md-4">
-                  <span class="icon-stack fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fas fa-object-group fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h2 class="title">Designer orienté UI/UX</h2>
-                  <p style="text-align:center">Je crée et mets vos interfaces hommes-machines sur des produits numériques temps-réel (Unity, Unreal) Je fabrique une cohérence graphique centrée sur vos utilisateurs.</p>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                  <span class="icon-stack fa-stack fa-lg">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fab fa-connectdevelop fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h2 class="title">Facilitateur des organisations</h2>
-                  <p style="text-align:center">J'anime vos ateliers, je libère vos organisation et facilite vos équipes en piochant dans les concepts et pratiques des entreprises libérées et de l'autogouvernance.</p>
-                </div>
-                <div class="col-sm-12 col-md-4">
-                  <span class="icon-stack fa-stack fa-lg center">
-                    <i class="fa fa-circle fa-stack-2x"></i>
-                    <i class="fas fa-hands-helping fa-stack-1x fa-inverse"></i>
-                  </span>
-                  <h2 class="title">Formateur, mentor et consultant</h2>
-                  <p style="text-align:center">Je forme et j'accompagne les profils et communautés locales de l'industrie numérique lyonnaise avec pour souhait de créer de la valeur qui fasse sens !</p>
-                </div>
-              </div>
-            </div>
-        </div>
-      </div>
-</div>
-
-<div class="coolrow">
-      <div class="coolrow-teaser">
-        <h1 class="title">Multi.Potentialité.s, Quézako ?</h1>
-        <div class="bootstrap-iso">
-          <div class="container">
-            <div class="row">
-				<div class="col-sm">
-					<div class="LI-profile-badge"  data-width="100%" data-version="v1" data-size="large"  data-locale="fr_FR" data-type="horizontal" data-theme="light" data-vanity="antoinegouy">
-						<a class="LI-simple-link" href='https://fr.linkedin.com/in/antoinegouy?trk=profile-badge' > 
-						<img src='/assets/img/content/fakelinkedin.jpg' alt="Badge Linkedin d'Antoine Gouy"></img>
-					</a></div>
-				</div>
-				<div class="col-sm">
-					<h3>Ou la problématique de l'épicier.</h3>
-					<p>Quand les outils deviennent des moyens vers un objectif, il est difficile de résumer son expertise par une compétence précise.</br>
-					Insatiable curieux et touche à tout, n'ayant pas peur d'apprendre je m'intéresse avant toute chose à la finalité...</br>
-					De faitje me résumerais par des verbes :</br>
-					Créer, faire, faire faire et apprendre à faire faire...</br> 
-					...plutot que part un intutilé de poste.</br></br>
-					Pour le reste je vous invite à cliquer sur mon Linkedin !</p>
-				</div>
-			</div>
-          </div>
-		</div>
-      </div>
-</div>
-
-{% include front/blogrow.liquid %}
+{% include front/threecolumnrow.liquid %}
+{% include front/linkedinrow.liquid %}
 {% include front/portfoliorow.liquid %}
+
 {% include front/wallsocialrow.liquid %}
 
 	  
