--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -27,7 +27,7 @@ layout: default
 </article>
 
   <div class="posts">
-    {% for post in paginator.posts %}
+    {% for post in paginator.posts reversed%}
     <div class="post-teaser">
       {% if post.thumbnail %} 
       <div class="post-img">
