--- a/_layouts/home.liquid
+++ b/_layouts/home.liquid
@@ -22,10 +22,10 @@ layout: default
         {% endif %}
     </style>
     <div id="main" class="call-out call-out_img">
-        <h1> {{ site.header_text | default: "Change <code>header_text</code> in <code>_config.yml</code>"}} </h1>
+        <h1> {{ site.header_text | default: "Changer <code>header_text</code> dans <code>_config.yml</code>"}} </h1>
+                  <span class="icon-stack fa-stack fa-lg subtle-txt-shadow">
+                    <i class="fa fa-arrow-down fa-stack-1x"></i>
+                  </span>
     </div>
-	
 	{% include landing.liquid %}
-
-
 </div>
