--- a/_sass/layouts/_blog.scss
+++ b/_sass/layouts/_blog.scss
@@ -12,7 +12,7 @@
   background-size: cover;
 
   h1 {
-    font-family: $font-family-logo;
+    font-family: $font-family-headings;
     @extend .subtle-txt-shadow;
   }
 
@@ -62,12 +62,13 @@
       overflow: hidden;
 
       @media (min-width: $break) {
-        height: 250px;
+      //height: 250px;
+
       }
 
       //Smaller screen
       @media screen and (max-width: $break) {
-        height: 150px;
+      //height: 150px;
       }
 
       img {
