--- a/_includes/front/wallsocialrow.liquid
+++ b/_includes/front/wallsocialrow.liquid
@@ -47,7 +47,8 @@
 
 					<div class="col-sm">
 						<h3 class="title text-center">Retrouvez-moi sur les réseaux</h3>
-						<iframe allowfullscreen id="wallsio-iframe" src="https://walls.io/i9z66?nobackground=1&amp;show_header=0" style="border:0;height:500px;width:100%" title="Site Perso"></iframe>
+						<script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+						<div class="elfsight-app-8ade7373-c0c6-4070-9b25-4ed0542886ba"></div>
 					</div>
 					
 			</div>
