Fixing building on ruby

--- a/_sass/external/font-awesome/_variables.scss
+++ b/_sass/external/font-awesome/_variables.scss
@@ -1,5 +1,10 @@
 // variables
 // --------------------------
+
+$fa-css-prefix          : fa !default;
+$fa-style               : 900 !default;
+$fa-style-family        : "Font Awesome 6 Free" !default;
+
 $fa-font-path:         "../fonts/font-awesome" !default;
 $fa-font-size-base:    16px !default;
 $fa-font-display:      block !default;
